// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page Container should render ById 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: grid;
  gap: 24px;
}

.emotion-2 {
  display: grid;
  gap: 40px;
  grid-template-rows: min-content min-content;
}

.emotion-4 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 3rem;
  line-height: 1.167;
  letter-spacing: 0em;
}

.emotion-5 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 500;
  font-size: 1.25rem;
  line-height: 1.6;
  letter-spacing: 0.0075em;
}

.emotion-8 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 2.125rem;
  line-height: 1.235;
  letter-spacing: 0.00735em;
}

.emotion-9 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 1.5rem;
  line-height: 1.334;
  letter-spacing: 0em;
}

.emotion-11 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5;
  letter-spacing: 0.00938em;
  margin-bottom: 0.35em;
}

.emotion-12 {
  border-collapse: collapse;
}

.emotion-13 {
  border-collapse: collapse;
  border: 1px solid #000000;
}

.emotion-22 {
  margin: 0;
  font: inherit;
  color: #1976d2;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-color: rgba(25, 118, 210, 0.4);
}

.emotion-22:hover {
  text-decoration-color: inherit;
}

.emotion-23 {
  margin: 0;
  max-width: 100%;
}

.emotion-25 {
  max-width: 100%;
  width: 100%;
  height: auto;
  aspect-ratio: auto 0.6666666666666666;
}

.emotion-27 {
  margin: 0;
}

.emotion-30 {
  display: grid;
  overflow-y: auto;
  list-style: none;
  padding: 0;
  -webkit-overflow-scrolling: touch;
  margin: 0;
  grid-template-columns: repeat(1, 1fr);
}

@media (min-width:600px) {
  .emotion-30 {
    grid-template-columns: repeat(2, 1fr);
  }
}

@media (min-width:900px) {
  .emotion-30 {
    grid-template-columns: repeat(3, 1fr);
  }
}

.emotion-31 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-31 .MuiImageListItem-img {
  object-fit: cover;
  width: 100%;
  height: auto;
  display: block;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.emotion-34 {
  position: relative;
  left: 0;
  right: 0;
  background: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
}

.emotion-35 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 6px 0 12px;
  color: inherit;
  overflow: hidden;
}

.emotion-36 {
  font-size: 1rem;
  line-height: 24px;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

.emotion-49 {
  display: grid;
  gap: 80px;
  grid-template-columns: minmax(min-content, 700px);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-51 {
  display: grid;
  gap: 16px;
  justify-items: center;
}

.emotion-53 {
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 50%;
  background-color: #1976d2;
  color: #fff;
  font-size: 1.5em;
  line-height: 1;
  width: 2em;
  height: 2em;
}

.emotion-81 {
  font-style: italic;
  margin: 24px 40px;
  display: grid;
  gap: 16px;
}

.emotion-85 {
  display: grid;
  gap: 16px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width:900px) {
  .emotion-85 {
    grid-template-columns: 1fr 1fr;
    gap: 40px;
  }
}

.emotion-87 {
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 16px;
}

.emotion-89 {
  max-width: 100%;
  width: 100%;
  height: auto;
  aspect-ratio: auto 0.6666666666666666;
}

@media (max-width:899.95px) {
  .emotion-89 {
    aspect-ratio: 1;
  }
}

.emotion-101 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.75;
  letter-spacing: 0.02857em;
  text-transform: uppercase;
  min-width: 64px;
  padding: 6px 16px;
  border-radius: 4px;
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  color: #fff;
  background-color: #000;
  box-shadow: 0px 3px 1px -2px rgba(0,0,0,0.2),0px 2px 2px 0px rgba(0,0,0,0.14),0px 1px 5px 0px rgba(0,0,0,0.12);
}

.emotion-101::-moz-focus-inner {
  border-style: none;
}

.emotion-101.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-101 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-101:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgb(0, 0, 0);
  box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12);
}

@media (hover: none) {
  .emotion-101:hover {
    background-color: #000;
  }
}

.emotion-101:active {
  box-shadow: 0px 5px 5px -3px rgba(0,0,0,0.2),0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12);
}

.emotion-101.Mui-focusVisible {
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px 0px rgba(0,0,0,0.14),0px 1px 18px 0px rgba(0,0,0,0.12);
}

.emotion-101.Mui-disabled {
  color: rgba(0, 0, 0, 0.26);
  box-shadow: none;
  background-color: rgba(0, 0, 0, 0.12);
}

.emotion-102 {
  overflow: hidden;
  pointer-events: none;
  position: absolute;
  z-index: 0;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border-radius: inherit;
}

.emotion-105 {
  width: 100%;
  border: 0;
  aspect-ratio: 1.78343949044586;
}

.emotion-111 {
  display: grid;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-121 {
  width: 100%;
  aspect-ratio: 16/9;
}

.emotion-123 {
  display: grid;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-125 {
  width: 325px;
  aspect-ratio: calc(
      1 / 1.77 - 0.15
    );
  border: 0;
}

.emotion-131 {
  width: 100%;
  aspect-ratio: 16/9;
}

.emotion-135 {
  width: 100%;
  aspect-ratio: 16/9;
}

.emotion-137 {
  display: grid;
  -webkit-column-gap: 16px;
  column-gap: 16px;
  row-gap: 40px;
  grid-template-columns: 1fr;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.emotion-139 {
  display: grid;
  grid-column: 1/-1;
}

@media (min-width:900px) {
  .emotion-139 {
    grid-column-start: 1;
    grid-column-end: 13;
    grid-row-start: 1;
    grid-row-end: 2;
  }
}

.emotion-141 {
  margin: 0;
  font: inherit;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  display: grid;
}

.emotion-142 {
  display: grid;
  gap: 8px;
  grid-template-rows: auto;
  grid-auto-rows: max-content;
}

.emotion-144 {
  max-width: 100%;
  width: 100%;
  height: auto;
  aspect-ratio: auto 0.6666666666666666;
  height: 100%;
  width: 100%;
  object-fit: cover;
}

.emotion-152 {
  margin-top: 16px;
}

.emotion-154 {
  display: grid;
  grid-column: 1/-1;
}

@media (min-width:900px) {
  .emotion-154 {
    grid-column-start: 1;
    grid-column-end: 13;
    grid-row-start: 2;
    grid-row-end: 3;
  }
}

.emotion-159 {
  max-width: 100%;
  width: 100%;
  height: auto;
  aspect-ratio: auto 1.4998125234345707;
  height: 100%;
  width: 100%;
  object-fit: cover;
}

.emotion-169 {
  display: grid;
  grid-column: 1/-1;
}

@media (min-width:900px) {
  .emotion-169 {
    grid-column-start: 1;
    grid-column-end: 13;
    grid-row-start: 3;
    grid-row-end: 4;
  }
}

.emotion-180 {
  display: grid;
  grid-column: 1/-1;
}

@media (min-width:900px) {
  .emotion-180 {
    grid-column-start: 1;
    grid-column-end: 13;
    grid-row-start: 4;
    grid-row-end: 5;
  }
}

.emotion-191 {
  display: grid;
  grid-column: 1/-1;
}

@media (min-width:900px) {
  .emotion-191 {
    grid-column-start: 1;
    grid-column-end: 13;
    grid-row-start: 5;
    grid-row-end: 6;
  }
}

.emotion-202 {
  display: grid;
  -webkit-column-gap: 16px;
  column-gap: 16px;
  row-gap: 40px;
  grid-template-columns: 1fr;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

@media (min-width:600px) {
  .emotion-202 {
    grid-template-columns: 1fr 1fr;
  }
}

@media (min-width:900px) {
  .emotion-202 {
    grid-template-columns: repeat(12, 1fr);
  }
}

.emotion-204 {
  display: grid;
}

@media (min-width:900px) {
  .emotion-204 {
    grid-column-start: 1;
    grid-column-end: 5;
    grid-row-start: 1;
    grid-row-end: 2;
  }
}

.emotion-219 {
  display: grid;
}

@media (min-width:900px) {
  .emotion-219 {
    grid-column-start: 5;
    grid-column-end: 9;
    grid-row-start: 1;
    grid-row-end: 2;
  }
}

.emotion-234 {
  display: grid;
}

@media (min-width:900px) {
  .emotion-234 {
    grid-column-start: 9;
    grid-column-end: 13;
    grid-row-start: 1;
    grid-row-end: 2;
  }
}

.emotion-245 {
  display: grid;
}

@media (min-width:900px) {
  .emotion-245 {
    grid-column-start: 1;
    grid-column-end: 5;
    grid-row-start: 2;
    grid-row-end: 3;
  }
}

.emotion-256 {
  display: grid;
}

@media (min-width:900px) {
  .emotion-256 {
    grid-column-start: 5;
    grid-column-end: 9;
    grid-row-start: 2;
    grid-row-end: 3;
  }
}

.emotion-267 {
  display: grid;
  -webkit-column-gap: 16px;
  column-gap: 16px;
  row-gap: 40px;
  grid-template-columns: 1fr;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

@media (min-width:600px) {
  .emotion-267 {
    grid-template-columns: 1fr 1fr;
  }
}

@media (min-width:900px) {
  .emotion-267 {
    grid-template-columns: repeat(12, 1fr);
  }
}

.emotion-269 {
  display: grid;
}

@media (min-width:900px) {
  .emotion-269 {
    grid-column-start: 1;
    grid-column-end: 4;
    grid-row-start: 1;
    grid-row-end: 7;
  }
}

.emotion-284 {
  display: grid;
}

@media (min-width:900px) {
  .emotion-284 {
    grid-column-start: 4;
    grid-column-end: 9;
    grid-row-start: 1;
    grid-row-end: 4;
  }
}

.emotion-299 {
  display: grid;
}

@media (min-width:900px) {
  .emotion-299 {
    grid-column-start: 9;
    grid-column-end: 13;
    grid-row-start: 1;
    grid-row-end: 7;
  }
}

.emotion-310 {
  display: grid;
}

@media (min-width:900px) {
  .emotion-310 {
    grid-column-start: 4;
    grid-column-end: 9;
    grid-row-start: 4;
    grid-row-end: 7;
  }
}

.emotion-321 {
  display: grid;
  grid-column: 1/-1;
}

@media (min-width:900px) {
  .emotion-321 {
    grid-column-start: 1;
    grid-column-end: 13;
    grid-row-start: 7;
    grid-row-end: 9;
  }
}

.emotion-334 {
  display: grid;
  gap: 32px;
}

.emotion-336 {
  display: grid;
  gap: 32px;
  grid-template-columns: repeat(auto-fit, minmax(325px, 1fr));
  justify-items: center;
}

.emotion-336 .emotion-340 {
  grid-template-columns: 1fr;
}

.emotion-338 {
  margin: 0;
  font: inherit;
  color: #1976d2;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-color: rgba(25, 118, 210, 0.4);
  width: 100%;
  color: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.emotion-338:hover {
  text-decoration-color: inherit;
}

.emotion-339 {
  display: grid;
  gap: 16px;
  grid-template-columns: 1fr;
  -webkit-align-content: start;
  -ms-flex-line-pack: start;
  align-content: start;
}

@media (min-width:900px) {
  .emotion-339 {
    grid-template-columns: minmax(30%, 200px) auto;
  }
}

.emotion-345 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: column;
  -webkit-flex-flow: column;
  -ms-flex-flow: column;
  flex-flow: column;
  gap: 8px;
}

.emotion-347 {
  display: grid;
  grid-template-columns: auto auto auto;
  gap: 8px;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-349 {
  display: grid;
  grid-template-columns: auto auto;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<article
    class="emotion-0 emotion-1"
  >
    <div
      data-testid="fake-head"
    >
      <meta
        content="website"
        property="og:type"
      />
      <meta
        content="socialMediaTitle"
        property="og:title"
      />
      <meta
        content="socialMediaDescription"
        property="og:description"
      />
      <meta
        content="socialMediaDescription"
        name="description"
      />
      <meta
        content="https://example.com"
        property="og:url"
      />
      <link
        href="https://example.com"
        rel="canonical"
      />
      <meta
        content="https://unsplash.it/500/300"
        property="og:image"
      />
      <meta
        content="summary_large_image"
        name="twitter:card"
      />
    </div>
    <script
      data-testid="fake-script"
      type="application/ld+json"
    >
      {"@context":"http://schema.org","@type":"WebPage","keywords":"foo,bar","image":"https://unsplash.it/500/300","description":"socialMediaDescription","name":"title","headline":"Title","identifier":"clgoyl8n042780301remhfw9cqj","url":"https://example.com"}
    </script>
    <div
      class="emotion-2 emotion-3"
    >
      <h1
        class="MuiTypography-root MuiTypography-h3 emotion-4"
      >
        Title
      </h1>
      <p
        class="MuiTypography-root MuiTypography-h6 emotion-5"
      >
        Lead
      </p>
    </div>
    <div
      class="emotion-6 emotion-7"
    >
      <div
        data-gramm="false"
        data-slate-editor="true"
        data-slate-node="value"
        style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
      >
        <h2
          class="MuiTypography-root MuiTypography-h4 emotion-8"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Title
            </span>
          </span>
        </h2>
        <h3
          class="MuiTypography-root MuiTypography-h5 emotion-9"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Title 2
            </span>
          </span>
        </h3>
        <h4
          class="MuiTypography-root MuiTypography-h6 emotion-5"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Title 3
            </span>
          </span>
        </h4>
        <ul
          data-slate-node="element"
        >
          <li
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Unordered List
              </span>
            </span>
          </li>
        </ul>
        <ol
          data-slate-node="element"
        >
          <li
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Ordered List
              </span>
            </span>
          </li>
        </ol>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-11"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-length="0"
              data-slate-zero-width="n"
            >
              ﻿
              <br />
            </span>
          </span>
        </p>
        <table
          class="emotion-12"
        >
          <tbody
            data-slate-node="element"
          >
            <tr
              data-slate-node="element"
            >
              <td
                class="emotion-13"
                data-slate-node="element"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-11"
                  data-slate-node="element"
                >
                  <span
                    data-slate-node="text"
                  >
                    <span
                      data-slate-string="true"
                    >
                      Table Cell 1
                    </span>
                  </span>
                </p>
              </td>
              <td
                class="emotion-13"
                data-slate-node="element"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-11"
                  data-slate-node="element"
                >
                  <span
                    data-slate-node="text"
                  >
                    <span
                      data-slate-string="true"
                    >
                      Table Cell 2
                    </span>
                  </span>
                </p>
              </td>
            </tr>
            <tr
              data-slate-node="element"
            >
              <td
                class="emotion-13"
                data-slate-node="element"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-11"
                  data-slate-node="element"
                >
                  <span
                    data-slate-node="text"
                  >
                    <span
                      data-slate-string="true"
                    >
                      Table Cell 3
                    </span>
                  </span>
                </p>
              </td>
              <td
                class="emotion-13"
                data-slate-node="element"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-11"
                  data-slate-node="element"
                >
                  <span
                    data-slate-node="text"
                  >
                    <span
                      data-slate-string="true"
                    >
                      Table Cell 4
                    </span>
                  </span>
                </p>
              </td>
            </tr>
          </tbody>
        </table>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-11"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Normal text,
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <strong
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                 Bold
              </span>
            </strong>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <em
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Italic
              </span>
            </em>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <u
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Underline
              </span>
            </u>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <del
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Strikethrough
              </span>
            </del>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <sup
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Sup
              </span>
            </sup>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <sub
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Sub
              </span>
            </sub>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-22"
            data-slate-node="element"
            href="https://google.com"
            rel="noreferrer"
            target="_blank"
            title="Link"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Link
              </span>
            </span>
          </a>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 😀
            </span>
          </span>
        </p>
      </div>
    </div>
    <figure
      class="emotion-23 emotion-24"
    >
      <img
        alt="DSC07717"
        class="emotion-25 emotion-26"
        loading="lazy"
        srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
        title=""
      />
      <figcaption>
        Caption
      </figcaption>
    </figure>
    <figure
      class="emotion-27 emotion-28"
    >
      <ul
        class="MuiImageList-root MuiImageList-standard emotion-29 emotion-30"
        style="grid-template-columns: repeat(0, 1fr); gap: 8px;"
      >
        <li
          class="MuiImageListItem-root MuiImageListItem-standard emotion-31"
          style="height: auto; grid-column-end: span 1; grid-row-end: span 1;"
        >
          <img
            alt="DSC07717"
            class="emotion-25 emotion-26"
            loading="lazy"
            srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
            title=""
          />
          <div
            class="MuiImageListItemBar-root MuiImageListItemBar-positionBelow emotion-34"
          >
            <div
              class="MuiImageListItemBar-titleWrap MuiImageListItemBar-titleWrapBelow emotion-35"
            >
              <div
                class="MuiImageListItemBar-title emotion-36"
              >
                Caption
              </div>
            </div>
          </div>
        </li>
        <li
          class="MuiImageListItem-root MuiImageListItem-standard emotion-31"
          style="height: auto; grid-column-end: span 1; grid-row-end: span 1;"
        >
          <img
            alt="DSC07717"
            class="emotion-25 emotion-26"
            loading="lazy"
            srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
            title=""
          />
          <div
            class="MuiImageListItemBar-root MuiImageListItemBar-positionBelow emotion-34"
          >
            <div
              class="MuiImageListItemBar-titleWrap MuiImageListItemBar-titleWrapBelow emotion-35"
            >
              <div
                class="MuiImageListItemBar-title emotion-36"
              >
                Caption
              </div>
            </div>
          </div>
        </li>
        <li
          class="MuiImageListItem-root MuiImageListItem-standard emotion-31"
          style="height: auto; grid-column-end: span 1; grid-row-end: span 1;"
        >
          <img
            alt="DSC07717"
            class="emotion-25 emotion-26"
            loading="lazy"
            srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
            title=""
          />
          <div
            class="MuiImageListItemBar-root MuiImageListItemBar-positionBelow emotion-34"
          >
            <div
              class="MuiImageListItemBar-titleWrap MuiImageListItemBar-titleWrapBelow emotion-35"
            >
              <div
                class="MuiImageListItemBar-title emotion-36"
              >
                Caption
              </div>
            </div>
          </div>
        </li>
      </ul>
    </figure>
    <div
      class="emotion-49 emotion-50"
    >
      <div
        class="emotion-51 emotion-52"
      >
        <div
          class="emotion-53 emotion-54"
        >
          1
        </div>
        <h3
          class="MuiTypography-root MuiTypography-h3 emotion-4"
        >
          Foobar
        </h3>
        <img
          alt="DSC07717"
          class="emotion-25 emotion-26"
          loading="lazy"
          srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
          title=""
        />
        <div
          class="emotion-6 emotion-7"
        >
          <div
            data-gramm="false"
            data-slate-editor="true"
            data-slate-node="value"
            style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-11"
              data-slate-node="element"
            >
              <span
                data-slate-node="text"
              >
                <span
                  data-slate-string="true"
                >
                  Lorem Ipsum
                </span>
              </span>
            </p>
          </div>
        </div>
      </div>
      <div
        class="emotion-51 emotion-52"
      >
        <div
          class="emotion-53 emotion-54"
        >
          2
        </div>
        <h3
          class="MuiTypography-root MuiTypography-h3 emotion-4"
        >
          Foobar
        </h3>
        <img
          alt="DSC07717"
          class="emotion-25 emotion-26"
          loading="lazy"
          srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
          title=""
        />
        <div
          class="emotion-6 emotion-7"
        >
          <div
            data-gramm="false"
            data-slate-editor="true"
            data-slate-node="value"
            style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-11"
              data-slate-node="element"
            >
              <span
                data-slate-node="text"
              >
                <span
                  data-slate-string="true"
                >
                  Lorem Ipsum
                </span>
              </span>
            </p>
          </div>
        </div>
      </div>
      <div
        class="emotion-51 emotion-52"
      >
        <div
          class="emotion-53 emotion-54"
        >
          3
        </div>
        <h3
          class="MuiTypography-root MuiTypography-h3 emotion-4"
        >
          Foobar
        </h3>
        <img
          alt="DSC07717"
          class="emotion-25 emotion-26"
          loading="lazy"
          srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
          title=""
        />
        <div
          class="emotion-6 emotion-7"
        >
          <div
            data-gramm="false"
            data-slate-editor="true"
            data-slate-node="value"
            style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-11"
              data-slate-node="element"
            >
              <span
                data-slate-node="text"
              >
                <span
                  data-slate-string="true"
                >
                  Lorem Ipsum
                </span>
              </span>
            </p>
          </div>
        </div>
      </div>
    </div>
    <blockquote
      class="emotion-81 emotion-82"
    >
      <p
        class="MuiTypography-root MuiTypography-h4 emotion-8"
      >
        «Quote»
      </p>
      <cite
        class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-11"
      >
        By an Author
      </cite>
    </blockquote>
    <div
      class="emotion-85 emotion-86"
    >
      <div
        class="emotion-87 emotion-88"
      >
        <img
          alt="DSC07717"
          class="emotion-89 emotion-26"
          loading="lazy"
          srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
          title=""
        />
      </div>
      <div
        class="emotion-87 emotion-88"
      >
        <div
          class="MuiTypography-root MuiTypography-h4 emotion-8"
          role="heading"
        >
          Break block test
        </div>
        <div
          class="emotion-6 emotion-7"
        >
          <div
            data-gramm="false"
            data-slate-editor="true"
            data-slate-node="value"
            style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-11"
              data-slate-node="element"
            >
              <span
                data-slate-node="text"
              >
                <span
                  data-slate-string="true"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit
                </span>
              </span>
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-11"
              data-slate-node="element"
            >
              <span
                data-slate-node="text"
              >
                <span
                  data-slate-length="0"
                  data-slate-zero-width="n"
                >
                  ﻿
                  <br />
                </span>
              </span>
            </p>
            <h4
              class="MuiTypography-root MuiTypography-h6 emotion-5"
              data-slate-node="element"
            >
              <span
                data-slate-node="text"
              >
                <span
                  data-slate-string="true"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit
                </span>
              </span>
            </h4>
            <h4
              class="MuiTypography-root MuiTypography-h6 emotion-5"
              data-slate-node="element"
            >
              <span
                data-slate-node="text"
              >
                <span
                  data-slate-length="0"
                  data-slate-zero-width="n"
                >
                  ﻿
                  <br />
                </span>
              </span>
            </h4>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-11"
              data-slate-node="element"
            >
              <span
                data-slate-node="text"
              >
                <em
                  data-slate-leaf="true"
                >
                  <strong
                    data-slate-leaf="true"
                  >
                    <span
                      data-slate-string="true"
                    >
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                    </span>
                  </strong>
                </em>
              </span>
              <span
                data-slate-node="text"
              >
                <em
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Lorem ipsum dolor sit amet, consectetur adipiscing elit
                  </span>
                </em>
              </span>
              <span
                data-slate-node="text"
              >
                <u
                  data-slate-leaf="true"
                >
                  <em
                    data-slate-leaf="true"
                  >
                    <span
                      data-slate-string="true"
                    >
                      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                    </span>
                  </em>
                </u>
              </span>
            </p>
          </div>
        </div>
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium emotion-101"
          href=""
          tabindex="0"
          type="button"
        >
          <span
            class="MuiTouchRipple-root emotion-102"
          />
        </button>
      </div>
    </div>
    <div
      class="emotion-103 emotion-104"
    >
      <iframe
        allowfullscreen=""
        class="emotion-105 emotion-106"
        sandbox=""
        src="https://www.example.com"
        title="Title"
      />
    </div>
    <script
      data-testid="fake-script"
      src="https://media.online.bildwurf.ch/js/code.min.js"
    />
    <div
      class="emotion-107 emotion-108"
      id="bildwurf-injection-wrapper"
    >
      <ins
        class="aso-zone"
        data-zone="77348"
      />
    </div>
    <div
      class="emotion-109 emotion-110"
    />
    <div
      class="emotion-111 emotion-112"
    >
      <div
        class="emotion-113 emotion-114"
        style="width: auto; height: auto;"
      >
        <div
          class="fb-video"
          data-allowfullscreen="true"
          data-autoplay="false"
          data-controls="true"
          data-href="https://www.facebook.com/100064959061177/videos/1310370486335266/"
          id=":r1:"
          style="width: 100%; height: 100%;"
        />
      </div>
    </div>
    <div
      class="emotion-115 emotion-116"
    />
    <div
      class="emotion-117 emotion-118"
    />
    <div
      class="emotion-119 emotion-120"
    >
      <div
        class="emotion-121 emotion-122"
        style="width: auto; height: auto;"
      >
        <iframe
          allow="autoplay"
          frameborder="0"
          src="https://w.soundcloud.com/player/?url=https%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F744469711"
          style="width: 100%; height: 100%;"
        />
      </div>
    </div>
    <div
      class="emotion-123 emotion-124"
    >
      <iframe
        allow="encrypted-media;"
        allowfullscreen=""
        class="emotion-125 emotion-126"
        src="https://www.tiktok.com/embed/v2/6718335390845095173"
        title="Embedded TikTok Video"
      />
    </div>
    <div
      class="emotion-127 emotion-128"
      data-theme="dark"
    >
      <div
        class="react-tweet-theme root"
      >
        <article
          class="article"
        >
          <div
            class="root"
          >
            <h3>
              Tweet not found
            </h3>
            <p>
              The embedded tweet could not be found…
            </p>
          </div>
        </article>
      </div>
    </div>
    <div
      class="emotion-129 emotion-130"
    >
      <div
        class="emotion-131 emotion-132"
        style="width: auto; height: auto;"
      >
        <div
          style="width: 100%; height: 100%; overflow: hidden;"
        />
      </div>
    </div>
    <div
      class="emotion-133 emotion-134"
    >
      <div
        class="emotion-135 emotion-136"
        style="width: auto; height: auto;"
      >
        <div
          style="width: 100%; height: 100%;"
        >
          <div />
        </div>
      </div>
    </div>
    <div
      class="emotion-137 emotion-138"
    >
      <article
        class="emotion-139 emotion-140"
        x="0"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-141"
          href="https://demo.wepublish.media/a/clg2cxnig57497901rej8i9ubj1/chur-solidarisiert-sich-mit-der-ukraine"
        >
          <div
            class="emotion-142 emotion-143"
          >
            <img
              alt="DSC07717"
              class="emotion-144 emotion-26"
              loading="lazy"
              srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
              title=""
            />
            <time
              class="emotion-146 emotion-147"
              datetime="2023-01-01T00:00:00.000Z"
            >
              01.01.2023
            </time>
            <header
              class="emotion-148 emotion-149"
            >
              <h1
                class="MuiTypography-root MuiTypography-h5 emotion-9"
              >
                Pre Title: Title
              </h1>
            </header>
            <p
              class="MuiTypography-root MuiTypography-h6 emotion-5"
            >
              Lead
            </p>
            <div
              class="emotion-152 emotion-153"
            >
              Foobar
            </div>
          </div>
        </a>
      </article>
      <article
        class="emotion-154 emotion-140"
        x="0"
        y="1"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-141"
          href="https://demo.wepublish.media/a/clg2cxnig57497901rej8i9ubj1/chur-solidarisiert-sich-mit-der-ukraine"
        >
          <div
            class="emotion-142 emotion-143"
          >
            <img
              alt="Friedensdemonstration gegen die Invasion und den Krieg von Russland in der Ukraine, fotografiert am 26.02.2022 in Bern. (KEYSTONE / Manuel Lopez)"
              class="emotion-159 emotion-26"
              loading="lazy"
              srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
              title="SCHWEIZ UKRAINE RUSSLAND KRIEG PROTEST"
            />
            <time
              class="emotion-146 emotion-147"
              datetime="2023-01-01T00:00:00.000Z"
            >
              01.01.2023
            </time>
            <header
              class="emotion-148 emotion-149"
            >
              <h1
                class="MuiTypography-root MuiTypography-h5 emotion-9"
              >
                Chur solidarisiert sich mit der Ukraine
              </h1>
            </header>
            <p
              class="MuiTypography-root MuiTypography-h6 emotion-5"
            >
              Auch ein Jahr nach Kriegsausbruch sind die Sympathien klar. 1000 Churer*innen standen am Samstag Mahnwache in Chur. 
            </p>
            <div
              class="emotion-152 emotion-153"
            >
              Foobar
            </div>
          </div>
        </a>
      </article>
      <article
        class="emotion-169 emotion-140"
        x="0"
        y="2"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-141"
          href="https://demo.wepublish.media/page/cl95fumlq261901phgrctx4mz/"
        >
          <div
            class="emotion-142 emotion-143"
          >
            <img
              alt="DSC07717"
              class="emotion-144 emotion-26"
              loading="lazy"
              srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
              title=""
            />
            <header
              class="emotion-148 emotion-149"
            >
              <h1
                class="MuiTypography-root MuiTypography-h5 emotion-9"
              >
                Pre Title: Title
              </h1>
            </header>
            <p
              class="MuiTypography-root MuiTypography-h6 emotion-5"
            >
              Lead
            </p>
          </div>
        </a>
      </article>
      <article
        class="emotion-180 emotion-140"
        x="0"
        y="3"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-141"
          href="https://demo.wepublish.media/page/cl95fumlq261901phgrctx4mz/"
        >
          <div
            class="emotion-142 emotion-143"
          >
            <img
              alt="DSC07717"
              class="emotion-144 emotion-26"
              loading="lazy"
              srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
              title=""
            />
            <header
              class="emotion-148 emotion-149"
            >
              <h1
                class="MuiTypography-root MuiTypography-h5 emotion-9"
              >
                Das ist ein Titel
              </h1>
            </header>
            <p
              class="MuiTypography-root MuiTypography-h6 emotion-5"
            />
          </div>
        </a>
      </article>
      <article
        class="emotion-191 emotion-140"
        x="0"
        y="4"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-141"
          href="https://google.com"
        >
          <div
            class="emotion-142 emotion-143"
          >
            <img
              alt="DSC07717"
              class="emotion-144 emotion-26"
              loading="lazy"
              srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
              title=""
            />
            <header
              class="emotion-148 emotion-149"
            >
              <h1
                class="MuiTypography-root MuiTypography-h5 emotion-9"
              >
                Pre Title: Title
              </h1>
            </header>
            <p
              class="MuiTypography-root MuiTypography-h6 emotion-5"
            >
              Lead
            </p>
          </div>
        </a>
      </article>
    </div>
    <div
      class="emotion-202 emotion-138"
    >
      <article
        class="emotion-204 emotion-140"
        x="0"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-141"
          href="https://demo.wepublish.media/a/clg2cxnig57497901rej8i9ubj1/chur-solidarisiert-sich-mit-der-ukraine"
        >
          <div
            class="emotion-142 emotion-143"
          >
            <img
              alt="DSC07717"
              class="emotion-144 emotion-26"
              loading="lazy"
              srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
              title=""
            />
            <time
              class="emotion-146 emotion-147"
              datetime="2023-01-01T00:00:00.000Z"
            >
              01.01.2023
            </time>
            <header
              class="emotion-148 emotion-149"
            >
              <h1
                class="MuiTypography-root MuiTypography-h5 emotion-9"
              >
                Pre Title: Title
              </h1>
            </header>
            <p
              class="MuiTypography-root MuiTypography-h6 emotion-5"
            >
              Lead
            </p>
            <div
              class="emotion-152 emotion-153"
            >
              Foobar
            </div>
          </div>
        </a>
      </article>
      <article
        class="emotion-219 emotion-140"
        x="4"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-141"
          href="https://demo.wepublish.media/a/clg2cxnig57497901rej8i9ubj1/chur-solidarisiert-sich-mit-der-ukraine"
        >
          <div
            class="emotion-142 emotion-143"
          >
            <img
              alt="Friedensdemonstration gegen die Invasion und den Krieg von Russland in der Ukraine, fotografiert am 26.02.2022 in Bern. (KEYSTONE / Manuel Lopez)"
              class="emotion-159 emotion-26"
              loading="lazy"
              srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
              title="SCHWEIZ UKRAINE RUSSLAND KRIEG PROTEST"
            />
            <time
              class="emotion-146 emotion-147"
              datetime="2023-01-01T00:00:00.000Z"
            >
              01.01.2023
            </time>
            <header
              class="emotion-148 emotion-149"
            >
              <h1
                class="MuiTypography-root MuiTypography-h5 emotion-9"
              >
                Chur solidarisiert sich mit der Ukraine
              </h1>
            </header>
            <p
              class="MuiTypography-root MuiTypography-h6 emotion-5"
            >
              Auch ein Jahr nach Kriegsausbruch sind die Sympathien klar. 1000 Churer*innen standen am Samstag Mahnwache in Chur. 
            </p>
            <div
              class="emotion-152 emotion-153"
            >
              Foobar
            </div>
          </div>
        </a>
      </article>
      <article
        class="emotion-234 emotion-140"
        x="8"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-141"
          href="https://demo.wepublish.media/page/cl95fumlq261901phgrctx4mz/"
        >
          <div
            class="emotion-142 emotion-143"
          >
            <img
              alt="DSC07717"
              class="emotion-144 emotion-26"
              loading="lazy"
              srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
              title=""
            />
            <header
              class="emotion-148 emotion-149"
            >
              <h1
                class="MuiTypography-root MuiTypography-h5 emotion-9"
              >
                Pre Title: Title
              </h1>
            </header>
            <p
              class="MuiTypography-root MuiTypography-h6 emotion-5"
            >
              Lead
            </p>
          </div>
        </a>
      </article>
      <article
        class="emotion-245 emotion-140"
        x="0"
        y="1"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-141"
          href="https://demo.wepublish.media/page/cl95fumlq261901phgrctx4mz/"
        >
          <div
            class="emotion-142 emotion-143"
          >
            <img
              alt="DSC07717"
              class="emotion-144 emotion-26"
              loading="lazy"
              srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
              title=""
            />
            <header
              class="emotion-148 emotion-149"
            >
              <h1
                class="MuiTypography-root MuiTypography-h5 emotion-9"
              >
                Das ist ein Titel
              </h1>
            </header>
            <p
              class="MuiTypography-root MuiTypography-h6 emotion-5"
            />
          </div>
        </a>
      </article>
      <article
        class="emotion-256 emotion-140"
        x="4"
        y="1"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-141"
          href="https://google.com"
        >
          <div
            class="emotion-142 emotion-143"
          >
            <img
              alt="DSC07717"
              class="emotion-144 emotion-26"
              loading="lazy"
              srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
              title=""
            />
            <header
              class="emotion-148 emotion-149"
            >
              <h1
                class="MuiTypography-root MuiTypography-h5 emotion-9"
              >
                Pre Title: Title
              </h1>
            </header>
            <p
              class="MuiTypography-root MuiTypography-h6 emotion-5"
            >
              Lead
            </p>
          </div>
        </a>
      </article>
    </div>
    <div
      class="emotion-267 emotion-268"
    >
      <article
        class="emotion-269 emotion-140"
        x="0"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-141"
          href="https://example.com"
        >
          <div
            class="emotion-142 emotion-143"
          >
            <img
              alt="DSC07717"
              class="emotion-144 emotion-26"
              loading="lazy"
              srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
              title=""
            />
            <time
              class="emotion-146 emotion-147"
              datetime="2023-01-01T00:00:00.000Z"
            >
              01.01.2023
            </time>
            <header
              class="emotion-148 emotion-149"
            >
              <h1
                class="MuiTypography-root MuiTypography-h5 emotion-9"
              >
                Pre Title: Title
              </h1>
            </header>
            <p
              class="MuiTypography-root MuiTypography-h6 emotion-5"
            >
              Lead
            </p>
            <div
              class="emotion-152 emotion-153"
            >
              Foobar, Foobar
            </div>
          </div>
        </a>
      </article>
      <article
        class="emotion-284 emotion-140"
        x="3"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-141"
          href="https://example.com"
        >
          <div
            class="emotion-142 emotion-143"
          >
            <img
              alt="DSC07717"
              class="emotion-144 emotion-26"
              loading="lazy"
              srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
              title=""
            />
            <time
              class="emotion-146 emotion-147"
              datetime="2023-01-01T00:00:00.000Z"
            >
              01.01.2023
            </time>
            <header
              class="emotion-148 emotion-149"
            >
              <h1
                class="MuiTypography-root MuiTypography-h5 emotion-9"
              >
                Chur solidarisiert sich mit der Ukraine
              </h1>
            </header>
            <p
              class="MuiTypography-root MuiTypography-h6 emotion-5"
            >
              Auch ein Jahr nach Kriegsausbruch sind die Sympathien klar. 1000 Churer*innen standen am Samstag Mahnwache in Chur. 
            </p>
            <div
              class="emotion-152 emotion-153"
            >
              Foobar, Foobar
            </div>
          </div>
        </a>
      </article>
      <article
        class="emotion-299 emotion-140"
        x="8"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-141"
          href="https://example.com"
        >
          <div
            class="emotion-142 emotion-143"
          >
            <img
              alt="DSC07717"
              class="emotion-144 emotion-26"
              loading="lazy"
              srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
              title=""
            />
            <header
              class="emotion-148 emotion-149"
            >
              <h1
                class="MuiTypography-root MuiTypography-h5 emotion-9"
              >
                Das ist ein Titel
              </h1>
            </header>
            <p
              class="MuiTypography-root MuiTypography-h6 emotion-5"
            />
          </div>
        </a>
      </article>
      <article
        class="emotion-310 emotion-140"
        x="3"
        y="3"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-141"
          href="https://example.com"
        >
          <div
            class="emotion-142 emotion-143"
          >
            <img
              alt="DSC07717"
              class="emotion-144 emotion-26"
              loading="lazy"
              srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
              title=""
            />
            <header
              class="emotion-148 emotion-149"
            >
              <h1
                class="MuiTypography-root MuiTypography-h5 emotion-9"
              >
                Pre Title: Title
              </h1>
            </header>
            <p
              class="MuiTypography-root MuiTypography-h6 emotion-5"
            >
              Lead
            </p>
          </div>
        </a>
      </article>
      <article
        class="emotion-321 emotion-140"
        x="0"
        y="6"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-141"
          href="https://google.com"
        >
          <div
            class="emotion-142 emotion-143"
          >
            <img
              alt="DSC07717"
              class="emotion-144 emotion-26"
              loading="lazy"
              srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
              title=""
            />
            <header
              class="emotion-148 emotion-149"
            >
              <h1
                class="MuiTypography-root MuiTypography-h5 emotion-9"
              >
                Pre Title: Title
              </h1>
            </header>
            <p
              class="MuiTypography-root MuiTypography-h6 emotion-5"
            >
              Lead
            </p>
          </div>
        </a>
      </article>
    </div>
    <div
      class="emotion-332 emotion-333"
    >
      <div>
        <div>
          Some HTML embed
        </div>
        

        <script>
          console.log("Some HTML embed")
        </script>
      </div>
    </div>
    <article
      class="emotion-334 emotion-335"
    />
    <aside
      class="emotion-336 emotion-337"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-338"
        href="https://example.com"
      >
        <article
          class="emotion-339 emotion-340"
        >
          <div
            class="emotion-341 emotion-342"
          >
            <img
              alt="DSC07717"
              class="emotion-25 emotion-26"
              loading="lazy"
              srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
              title=""
            />
          </div>
          <div
            class="emotion-345 emotion-346"
          >
            <div
              class="emotion-347 emotion-348"
            >
              <div
                class="emotion-349 emotion-350"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20a2 2 0 002 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"
                  />
                </svg>
                <time
                  datetime="2023-02-24T09:00:00.000Z"
                >
                  24.02.2023 09:00
                </time>
              </div>
              – 
              <time
                datetime="2023-02-25T07:30:00.000Z"
              >
                25.02.2023 07:30
              </time>
            </div>
            <h1
              class="MuiTypography-root MuiTypography-h4 emotion-8"
            >
              Cool concert
            </h1>
            <div
              class="emotion-6 emotion-7"
            >
              <div
                data-gramm="false"
                data-slate-editor="true"
                data-slate-node="value"
                style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-11"
                  data-slate-node="element"
                >
                  <span
                    data-slate-node="text"
                  >
                    <span
                      data-slate-string="true"
                    >
                      Lorem ipsum dolor sit amet, 
                    </span>
                  </span>
                  <span
                    data-slate-node="text"
                  >
                    <strong
                      data-slate-leaf="true"
                    >
                      <span
                        data-slate-string="true"
                      >
                        consectetur adipiscing elit, 
                      </span>
                    </strong>
                  </span>
                  <span
                    data-slate-node="text"
                  >
                    <em
                      data-slate-leaf="true"
                    >
                      <span
                        data-slate-string="true"
                      >
                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
                      </span>
                    </em>
                  </span>
                  <span
                    data-slate-node="text"
                  >
                    <u
                      data-slate-leaf="true"
                    >
                      <span
                        data-slate-string="true"
                      >
                        Ut enim ad minim veniam, 
                      </span>
                    </u>
                  </span>
                  <span
                    data-slate-node="text"
                  >
                    <del
                      data-slate-leaf="true"
                    >
                      <span
                        data-slate-string="true"
                      >
                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
                      </span>
                    </del>
                  </span>
                  <span
                    data-slate-node="text"
                  >
                    <span
                      data-slate-string="true"
                    >
                      Duis aute irure dolor i
                    </span>
                  </span>
                  <span
                    data-slate-node="text"
                  >
                    <span
                      data-slate-length="0"
                      data-slate-zero-width="z"
                    >
                      ﻿
                    </span>
                  </span>
                </p>
              </div>
            </div>
          </div>
        </article>
      </a>
    </aside>
  </article>
</DocumentFragment>
`;

exports[`Page Container should render BySlug 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -900,11 +900,11 @@
            class="fb-video"
            data-allowfullscreen="true"
            data-autoplay="false"
            data-controls="true"
            data-href="https://www.facebook.com/100064959061177/videos/1310370486335266/"
-           id=":r0:"
+           id=":r2:"
            style="width: 100%; height: 100%;"
          />
        </div>
      </div>
      <div"
`;

exports[`Page Container should render WithChildren 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -900,11 +900,11 @@
            class="fb-video"
            data-allowfullscreen="true"
            data-autoplay="false"
            data-controls="true"
            data-href="https://www.facebook.com/100064959061177/videos/1310370486335266/"
-           id=":r0:"
+           id=":r3:"
            style="width: 100%; height: 100%;"
          />
        </div>
      </div>
      <div
@@ -1828,7 +1828,10 @@
              </div>
            </div>
          </article>
        </a>
      </aside>
+     <div>
+       Children
+     </div>
    </article>
  </DocumentFragment>"
`;

exports[`Page Container should render WithClassName 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -1,8 +1,8 @@
  <DocumentFragment>
    <article
-     class="css-1oxrv00-PageWrapper ei3npnw0"
+     class="extra-classname css-1oxrv00-PageWrapper ei3npnw0"
    >
      <div
        data-testid="fake-head"
      >
        <meta
@@ -900,11 +900,11 @@
            class="fb-video"
            data-allowfullscreen="true"
            data-autoplay="false"
            data-controls="true"
            data-href="https://www.facebook.com/100064959061177/videos/1310370486335266/"
-           id=":r0:"
+           id=":r4:"
            style="width: 100%; height: 100%;"
          />
        </div>
      </div>
      <div"
`;

exports[`Page Container should render WithEmotion 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -900,11 +900,11 @@
            class="fb-video"
            data-allowfullscreen="true"
            data-autoplay="false"
            data-controls="true"
            data-href="https://www.facebook.com/100064959061177/videos/1310370486335266/"
-           id=":r0:"
+           id=":r5:"
            style="width: 100%; height: 100%;"
          />
        </div>
      </div>
      <div"
`;
